Fix/ie11 interface bugs (#26944)
* Interface: fixed not showing footer in IE11

* Interface: prevent editor from overflowing browser window in IE11

* Interface: better solution to prevent editor from overflowing browser window in IE11

--- a/packages/interface/src/components/interface-skeleton/style.scss
+++ b/packages/interface/src/components/interface-skeleton/style.scss
@@ -36,8 +36,7 @@ html.interface-interface-skeleton__html-container {
 .interface-interface-skeleton__editor {
 	display: flex;
 	flex-direction: column;
-	flex-grow: 1;
-	max-width: 100%;
+	flex: 0 1 100%;
 }
 
 @include editor-left(".interface-interface-skeleton");
@@ -142,8 +141,9 @@ html.interface-interface-skeleton__html-container {
 	flex-shrink: 0;
 	border-top: $border-width solid $gray-200;
 	color: $gray-900;
-	position: fixed;
+	position: absolute;
 	bottom: 0;
+	left: 0;
 	width: 100%;
 	background-color: $white;
 	z-index: z-index(".interface-interface-skeleton__footer");
